--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,27 +5,37 @@
             article-one! Avantika Nimje
         </title>
         <meta name="viewport" content="width=device-width initial-scale=1" />
+        <style>
+            .container{
+                max-width:800px;
+                margin:0 auto;
+                color:grey;
+                font-family:sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-            <hr/>
-            <h3>Article One</h3>
+      <div class="container">   
             <div>
-                Sept 29th
+                <a href="/">Home</a>
             </div>
-        <div>
-        <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
-         <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
-         <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
-        </div>
+                <hr/>
+                <h3>Article One</h3>
+                <div>
+                    Sept 29th
+                </div>
+            <div>
+            <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+             <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+             <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+            </div>
+        </div> 
     </body>
     
     
