--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,26 +5,29 @@
             article-three! Avantika Nimje
         </title>
         <meta name="viewport" content="width=device-width initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-            <hr/>
-            <h3>Article Three</h3>
+        <div class="container">
             <div>
-                Sept 29th
+                <a href="/">Home</a>
             </div>
-        <div>
-        <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
-         <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
-         <p>
-            This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
-        </p>
+                <hr/>
+                <h3>Article Three</h3>
+                <div>
+                    Sept 29th
+                </div>
+            <div>
+            <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+             <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+             <p>
+                This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!This is Article one!
+            </p>
+            </div>
         </div>
     </body>
     
